[package]
name = "test-performance-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-ai-ide-cargo = { path = "../crates/rust-ai-ide-cargo" }
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.99"
env_logger = "0.11.8"
log = "0.4.27"
# rust-ai-ide-workspace-hack = { path = "../workspace-hack" }
