[package]
name = "test-performance-analyzer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

# Performance analysis dependencies
criterion.workspace = true
sysinfo.workspace = true

# Shared workspace dependencies
rust-ai-ide-common = { workspace = true }
rust-ai-ide-performance = { workspace = true }
rust-ai-ide-types = { workspace = true }

[dev-dependencies]
tokio-test.workspace = true