[package]
name = "rust-ai-ide-ai-codegen"
version = { workspace = true }
edition = { workspace = true }
description = "AI-powered multi-language code generation with template systems for the Rust AI IDE"
authors = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
# Core async runtime
tokio = { workspace = true }

# Serialization and data structures
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling and logging
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

# Template rendering for code generation
handlebars = { workspace = true }

# AST parsing and code manipulation
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }

# Pattern matching
regex = { workspace = true }
fancy-regex = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }

# AI dependencies from other crates (may need adjustment)
rust-ai-ide-ai-inference = { path = "../rust-ai-ide-ai-inference" }

# Common types shared across crates
rust-ai-ide-common = { path = "../rust-ai-ide-common" }

# Shared code generation interfaces
rust-ai-ide-shared-codegen = { path = "../rust-ai-ide-shared-codegen" }

# Shared testing utilities
shared-test-utils = { path = "../shared-test-utils" }

# Development and testing
futures = { workspace = true }

[dev-dependencies]
tokio-test = "^0.4.4"
tempfile = { workspace = true }
