[package]
name = "rust-ai-ide-ai-distributed-coordinator"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Distributed AI coordinator for load balancing and model sharding"
license = { workspace = true }
rust-version = { workspace = true }
repository = "https://github.com/rust-ai-ide/rust-ai-ide"

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0.16"
anyhow = "1.0.99"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# For distributed computing
dashmap = "6.1.0"
futures = "0.3"
tower = { version = "0.4", features = ["load-shed", "limit"] }

# For metrics and monitoring
prometheus = "0.13"
lazy_static = "1.5"

# For model sharding
uuid = { version = "1.15", features = ["v4"] }

[dependencies.rust-ai-ide-types]
path = "../rust-ai-ide-types"

[dependencies.rust-ai-ide-errors]
path = "../rust-ai-ide-errors"

[dependencies.rust-ai-ide-ai-inference]
path = "../rust-ai-ide-ai-inference"

[features]
default = ["std"]
std = []
distributed = []
sharding = ["distributed"]
gpu = ["distributed"]