[package]
name = "rust-ai-ide-ai-inference"

version = { workspace = true }
edition = { workspace = true }

[dependencies]
tokio = { workspace = true, features = ["full"] }
once_cell = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
sysinfo = { workspace = true }
petgraph = { workspace = true }
tempfile = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
dirs-next = { workspace = true }
tokio-util = "0.7.16"
bytes = { workspace = true }
futures-util = "0.3.31"
chrono = { workspace = true }
uuid = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
lazy_static = { workspace = true }
filetime = { workspace = true }
proc-macro2 = { workspace = true }
heck = "^0.5.0"
tokio-stream = { workspace = true }
prettyplease = "0.2.37"
criterion = { version = "0.7.0", features = ["html_reports"] }
reqwest-retry = "^0.7.0"
reqwest-middleware = "^0.4.2"
moka = { workspace = true }
lru = { workspace = true }
sha2 = "^0.10.9"

# SIMD acceleration support
rust-ai-ide-simd = { path = "../rust-ai-ide-simd", optional = true }

# Lazy loading infrastructure
rust-ai-ide-lazy-loading = { path = "../rust-ai-ide-lazy-loading" }

[features]
default = []
simd = ["rust-ai-ide-simd"]
inference = []

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
tokio-test = "^0.4.4"
