[package]
name = "rust-ai-ide-ai-learning"

version = { workspace = true }
edition = { workspace = true }
description = "AI-powered learning system for pattern recognition and error resolution"
authors = { workspace = true }

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "io-util"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
tempfile = { workspace = true }
regex = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
dirs-next = { workspace = true }
dirs = { version = "^5.0.0" }

# Advanced ML dependencies
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas"] }
statrs = "0.16"
rust-ai-ide-cache = { path = "../rust-ai-ide-cache" }
rust-ai-ide-errors = { path = "../rust-ai-ide-errors" }
rust-ai-ide-security = { path = "../rust-ai-ide-security" }
rust-ai-ide-common = { path = "../rust-ai-ide-common" }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "^0.4.4"
