[package]
name = "rust-ai-ide-ai-orchestration-core"

version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "AI Orchestration Layer Core - Unified service manager for AI model coordination"
license = { workspace = true }
rust-version = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
thiserror = "2.0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# AI/ML related dependencies (sample implementations)
candle-core = "0.6.0"
candle-nn = "0.6.0"
tokenizers = "0.21.4"

# Performance and caching
moka = { version = "0.12", features = ["future"] }

# Concurrency primitives
dashmap = "6.1.0"

# Metrics and monitoring
prometheus = "0.14.0"
lazy_static = "1.5"

# UUID for service IDs
uuid = { version = "1.15", features = ["v4"] }

# Local workspace dependencies
rust-ai-ide-common = { path = "../rust-ai-ide-common" }
rust-ai-ide-errors = { path = "../rust-ai-ide-errors" }
rust-ai-ide-types = { path = "../rust-ai-ide-types" }
rust-ai-ide-performance = { path = "../rust-ai-ide-performance" }
rust-ai-ide-cache = { path = "../rust-ai-ide-cache" }

[features]
default = ["std"]
std = []
enhanced_coordination = []
distributed = []
gpu_acceleration = ["distributed"]