[package]
name = "rust-ai-ide-ai-quantization"
readme = { workspace = true }
version = "0.1.0"
edition = "2021"
rust-version = "1.91.0"
authors = ["Rust AI IDE Team"]
license = "MIT OR Apache-2.0"
publish = false
description = "AI Model quantization infrastructure for Rust AI IDE"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
hf-hub = { workspace = true }
safetensors = { workspace = true }
moka = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Workspace dependencies
rust-ai-ide-cache = { path = "../rust-ai-ide-cache" }
rust-ai-ide-shared-types = { path = "../rust-ai-ide-shared-types" }
rust-ai-ide-errors = { path = "../rust-ai-ide-errors" }
rust-ai-ide-security = { path = "../rust-ai-ide-security" }

# Common validation utilities
rust-ai-ide-common = { path = "../rust-ai-ide-common", features = ["validation"] }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }