[package]
name = "rust-ai-ide-ai-specgen"

version = { workspace = true }
edition = { workspace = true }

[dependencies]
# Core dependencies
tokio = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Template and validation dependencies
handlebars = { workspace = true }
validator = { workspace = true }
regex = { workspace = true }
fancy-regex = { workspace = true }

# File system operations
walkdir = { workspace = true }
ignore = { workspace = true }

# Async traits and utilities
async-trait = "0.1.89"

# Enhanced dependencies for advanced template system
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = "1.0.40"
proc-macro2 = "^1.0.101"

# Testing utilities (optional)
tempfile = { version = "^3.21.0", optional = true }

[dev-dependencies]
tokio-test = "^0.4.4"
tempfile = "^3.21.0"

[features]
default = []
test-utils = ["tempfile"]
