[package]
name = "rust-ai-ide-ai-sql-lsp"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
description = "AI-enhanced SQL LSP server with intelligent code analysis, predictive suggestions, and adaptive optimization"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
once_cell = "1.0"

# Internal dependencies
rust-ai-ide-types = { path = "../rust-ai-ide-types" }
rust-ai-ide-errors = { path = "../rust-ai-ide-errors" }
rust-ai-ide-common = { path = "../rust-ai-ide-common" }
rust-ai-ide-ai = { path = "../rust-ai-ide-ai" }
rust-ai-ide-ai-predictive = { path = "../rust-ai-ide-ai-predictive" }
rust-ai-ide-ai-learning = { path = "../rust-ai-ide-ai-learning" }
rust-ai-ide-cache = { path = "../rust-ai-ide-cache" }
rust-ai-ide-performance = { path = "../rust-ai-ide-performance" }

# Basic ML libraries (will use simple implementations)
ndarray = "0.15"
# Use internal AI libraries instead of external heavy ML libs
rust-ai-ide-ai-analysis = { path = "../rust-ai-ide-ai-analysis" }
rust-ai-ide-ai-inference = { path = "../rust-ai-ide-ai-inference" }

# Database/cache
rusqlite = { workspace = true }

# Performance optimizations
moka = { version = "0.12", features = ["future"] }
dashmap = "5.5"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

# Feature flags for backward compatibility during rollout
[features]
default = ["all"]
all = ["pattern-recognition", "predictive-suggestions", "adaptive-caching", "real-time-monitoring"]
pattern-recognition = []
predictive-suggestions = []
adaptive-caching = []
real-time-monitoring = []